# maskx

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: README.md  index.md
docs/notebooks/: equinox_optax_demo.ipynb
maskx/: __init__.py  core.py
tests/: test_core.py
