[project]
name = "maskx"
version = "0.1.0"
description = "Path-based mask algebra for JAX PyTrees."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Leon Armbruster", email = "leonarmbruster@proton.me" }]
keywords = ["jax", "pytree", "masking", "equinox", "optax", "paramax"]
classifiers = [
	"Development Status :: 3 - Alpha",
	"Intended Audience :: Developers",
	"Intended Audience :: Science/Research",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Typing :: Typed",
	"Topic :: Scientific/Engineering :: Artificial Intelligence",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["jax", "equinox"]

[project.optional-dependencies]
dev = ["black", "pytest", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["maskx"]
include = ["maskx/py.typed"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.black]
target-version = ["py310", "py311", "py312"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F"]
